<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFF3FF"
    tools:context=".OnboardingActivity">

    <!-- Image1: Inhaler -->


    <!--Title-->

    <ImageView
        android:id="@+id/onboardingImage"
        android:layout_width="264dp"
        android:layout_height="222dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/onboarding_image_desc"
        android:src="@drawable/person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skipButton" />

    <TextView
        android:id="@+id/onboardingHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_heading"
        android:textSize="24sp"
        android:textColor="#2E7D32"
        android:fontFamily="@font/nunito_regular"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/onboardingImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"/>

    <TextView
        android:id="@+id/onboardingSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_subtitle"
        android:textSize="18sp"
        android:textColor="#666666"
        android:fontFamily="@font/nunito_medium"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/onboardingHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"/>

    <TextView
        android:id="@+id/onboardingDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_description"
        android:textSize="16sp"
        android:textColor="#000000"
        android:fontFamily="@font/nunito_regular"
        android:layout_marginTop="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/onboardingSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"/>

    <!--Buttons-->
    <!-- Back Button -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/back_button"
        android:textColor="#2E7D32"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Skip Button -->
    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/skip_button"
        android:textColor="#2E7D32"
        android:textSize="22sp"
        android:fontFamily="@font/nunito_medium"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Next Button -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:text="@string/next_button"
        android:textColor="#2E7D32"
        android:textSize="22sp"
        android:fontFamily="@font/nunito_medium"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

