<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFF3FF"
    tools:context=".OnboardingActivity">

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@android:color/transparent"
        android:text="@string/skip_button"
        android:textColor="#2E7D32"
        android:textSize="22sp"
        android:fontFamily="@font/nunito_medium"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/onboardingImage"
        android:layout_width="264dp"
        android:layout_height="222dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/onboarding_image_desc4"
        android:src="@drawable/shield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skipButton" />

    <TextView
        android:id="@+id/onboardingSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:breakStrategy="simple"
        android:ellipsize="none"
        android:fontFamily="@font/nunito_medium"
        android:gravity="center"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:text="@string/onboarding_subtitle4"
        android:textColor="#666666"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboardingHeading" />

    <TextView
        android:id="@+id/onboardingHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:text="@string/onboarding_heading4"
        android:textColor="#2E7D32"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboardingImage" />

    <TextView
        android:id="@+id/onboardingDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:text="@string/onboarding_description4"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboardingSubtitle" />

    <include
        android:id="@+id/safetyNote"
        layout="@layout/view_safety_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/backButton" />
    <Button
        android:id="@+id/backButton"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:text="@string/back_button"
        android:textColor="#2E7D32"
        android:textSize="24sp"
        android:fontFamily="@font/nunito_medium"
        android:background="@android:color/transparent"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/next_button"
        android:textColor="#2E7D32"
        android:textSize="24sp"
        android:fontFamily="@font/nunito_medium"
        android:background="@android:color/transparent"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
